[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unhingedmf"
version = "0.1.0"
description = "An unhinged, witty terminal chatbot powered by Gemini"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Rehana Rahman"}]
dependencies = [
    "google-generativeai>=0.7.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1"
]

[project.scripts]
unhingedmf = "unhingedmf.cli:main"
