[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unhingedmf"
version = "0.2.0"
description = "A feral, witty terminal chatbot powered by AI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Rehana Rahman"}]
dependencies = [
    "google-generativeai>=0.8.0",
    "rich>=13.7.0"
]

[project.scripts]
unhingedmf = "unhingedmf.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0"
]
